<resources>
    <string name="app_name" translatable="false">WAMR</string>
    <string name="header_name" translatable="false">WAMR</string>
    <string name="whats_web" translatable="false">WAMR Web</string>
    <string name="whatsapp">WAMRWhatsApp</string>
    <string name="wbuisness">WAMRWhatsApp Business</string>
    <string name="support">Support</string>
    <string name="privacy">Privacy Policy</string>
    <string name="rating">Rating</string>
    <string name="moreapps">More Apps</string>
    <string name="thanks_for_love">Thanks for liking our App!</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="oh_no">Oh No!</string>
    <string name="the_best_we">The best we can get</string>
    <string name="rate_us_on_google">Rate us on Google Play</string>
    <string name="any_name">Any name</string>
    <string name="date">date</string>
    <string name="chats">Chats</string>
    <string name="tools">Tools</string>
    <string name="media">Media</string>
    <string name="status">Status</string>
    <string name="next">Next</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="let_app_always_run_in_background">Let app always run in background</string>
    <string name="allowing_recoveryapp_to_always_run_in_the_background_may_reduce_battery_life">Please allow WAMR to always run in the background. This may slightly reduce your battery life.</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="media_observer_service">Media Observer Service</string>
    <string name="allow_storage_permission_msg">Messages and media cannot be saved without storage permission. Restart the app and allow.</string>
    <string name="create_backup_dir">Creating backup directory</string>
    <string name="create_backup_dir_failed">Failed to create backup directory</string>
    <string name="permission_required">Core Permission Required</string>
    <string name="this_permission_is_required_to_run_this_application">This Permission is required to run this application.</string>
    <string name="ok">OK</string>
    <string name="finish">Finish</string>
    <string name="set_home">Set to Home Screen</string>
    <string name="set_lock">Set to Lock Screen</string>
    <string name="set_both">Set to Both</string>
    <string name="please_wait">Please wait…</string>
    <string name="images">Images</string>
    <string name="video">Videos</string>
    <string name="no_deleted_media">No deleted media</string>
    <string name="no_status_file_found">No Status  Found</string>
    <string name="save">Save</string>
    <string name="share_app">Share App</string>
    <string name="photo">Photo</string>
    <string name="please_provide_permissions">Please provide Permissions</string>
    <string name="click_to_grant_permission">click to grant permission</string>
    <string name="share">Share</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="chat_screenshot">Chat Screenshot</string>
    <string name="ads_free">Ads Free</string>
    <string name="allow_access_to_your_files_to_view_modify_and_save_pdfs">Allow access to your files to view, save Videos, Audios, Pictures and Status</string>
    <string name="no_files_will_be_modified_or_deleted_n_without_your_consent_you_may_n_enable_permissions_in_the_settings_n_app">No files will be modified or deleted\n without your consent. You may\n enable permissions in the Settings\n app.</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="not_now">Not now</string>
    <string name="volume">Volume</string>
    <string name="repeat_limit">You can repeat text up to 5000 only</string>
    <string name="brightness">Brightness</string>
    <string name="saved_in_downloads">Screenshot saved in downloads</string>
    <string name="feature_coming_soon">Audio Player Feature Coming soon</string>
    <string name="grant_permission">Please grant Permissions for Media</string>
    <string name="need_permission_to_use">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="need_storage_permission">Need Storage Permission</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="allow_permission_manually">You need to allow necessary permissions in Settings manually</string>
    <string name="permission_granted">All permissions are granted</string>
    <string name="core_fundamental">Core fundamental are based on these permissions</string>
    <string name="storage_permission_description">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="need_battery_optimization">Need Battery Optimization Permission</string>
    <string name="please_allow_wamr">Please allow WAMR to read notifications in order to recover deleted messages</string>
    <string name="sure">sure</string>
    <string name="please_allow_wamr_notification_permission_description">Please allow WAMR to read notifications in order to recover deleted messages</string>
    <string name="file_already_exists">File alredy exists</string>
    <string name="image_already_saved">File already saved!</string>
    <string name="please_reload_again">Please reload again</string>
    <string name="this_is_saved"> this is saved</string>
    <string name="allow_me">Allow me</string>
    <string name="all">All</string>
    <string name="audios">Audios</string>
    <string name="media_recovery_service_is_running">Media Recovery service is running</string>
    <string name="media_recovery">Media Recovery</string>
    <string name="no_deleted_audios">No Deleted Audios Found</string>
    <string name="no_deleted_files">No Deleted Files Found</string>
    <string name="no_deleted_images">No Deleted Images Found</string>
    <string name="no_deleted_videos">No Deleted Videos Found</string>
    <string name="no_deleted_data">No Delete Data Found</string>
    <string name="recover_messages">Recover Messages</string>
    <string name="we_re_working_on_it_will_be_right_back_soon">We are working on it will be right back soon!</string>
    <string name="send_error_report">Send error report</string>
    <string name="search_here_hint">Search here</string>
    <string name="select_below_plan_according_to_your_need">Select Below Plan According To \nYour Need</string>
    <string name="download_media">Download Media</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="get_premium_now">Get Premium Now</string>
    <string name="get_access_to_unlimited_features">Get access to unlimited Features</string>
    <string name="your_subscription_will_be_auto_renews_you_can_cancel_anytime">Your subscription will be auto-renews. You can cancel anytime</string>
    <string name="your_subscription_can_be_managed_or_canceled_under_your_google_play_store_account_profile_payments_amp_subscriptions_subscriptions">Your subscription can be managed or canceled under your google play store account profile Payments &amp; Subscriptions > Subscriptions></string>
    <string name="powered_by_dzine_media">Powered By Dzine Media</string>
    <string name="exit_app">Exit App</string>
    <string name="rahul_agrawal_is_a_good_boy_but_he_does_not_know_what_he_wants">Rahul Agrawal is a good boy but he does not know what he wants.</string>
    <string name="no_media">No Media</string>
    <string name="wapp_permission">Click on this button and Allow permission to access your status</string>
    <string name="allow_storage_access">Allow storage access</string>
    <string name="no_chat_found">No chat found</string>
    <string name="hallo_hamza">Hello, HAMZA</string>
    <string name="tap_to_load_statuses">Allow storage access</string>
    <string name="downloaded">Downloaded</string>
    <string name="no_downloaded_statuses">No Downloaded Statuses</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="to_download_delete_images_videos_and_audios">To Download delete Images, Videos and Audios</string>
    <string name="get_premium">Get Premium</string>
    <string name="data_added">data added</string>
    <string name="allow_permission_for_forground">Allow permission for Foreground Service!</string>
    <string name="saved">Saved</string>
    <string name="status_saved">Status Saved</string>
    <string name="status_saved_successfully">Status Saved Successfully</string>
    <string name="repeat">Repeat</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="enter_repeat_text">Enter Repeat Text</string>
    <string name="no_of_repeat_text">Repetition Limit</string>
    <string name="previous">|&lt;</string>
    <string name="step_back">&lt;&lt;</string>
    <string name="play">&gt;</string>
    <string name="step_forward">&gt;&gt;</string>
    <string name="next_audio">&gt;|</string>
    <string name="blank">---</string>
    <string name="start_time">00:00:00</string>
    <string name="end_time">00:00:00</string>
    <string name="text_repeater">Text Repeater</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="max_limit_5000">Max Limit 5000</string>
    <string name="new_line">New Line</string>
    <string name="off">OFF</string>
    <string name="result_filed_empty">Result Filed Empty</string>
    <string name="textFieldEmpty">Text Field Empty</string>
    <string name="on">ON</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="please_enter_valid_no">Please Enter Valid No</string>
    <string name="message_empty">Message Empty</string>
    <string name="intent_text">Select an app to share</string>
    <string name="wait">Please wait</string>
    <string name="enter_phone">Enter Number</string>
    <string name="not_found">not found</string>
    <string name="type_message_here">Type Message Here</string>
    <string name="send">Send</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="sure_to_delete">Sure to Delete this Image?</string>
    <string name="yes">Yes</string>
    <string name="saved_successfully">Status saved successfully</string>
    <string name="sorry_msg">Sorry we can\'t move file.try with other file.</string>
    <string name="preview">Preview</string>
    <string name="saved_status">Saved Status</string>
    <string name="there_s_nothing_here">There\'s nothing here.</string>
    <string name="please_install_first">Please Install WAMRWhatsApp For Download Status!!!!!</string>
    <string name="no_status_found">No Status Found</string>
    <string name="there_s_no_status">There\'s no status.</string>
    <string name="rate_us">Rate us</string>
    <string name="back">Back</string>
    <string name="wamr_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAzljgiT7vXv4R0o3lh/zmGvMFjJ3gw1PZYXsvHg/I8T8w5ztgPWQ8LAI6j/rZrMsU9edLo4NEoFAItpxi05/H+ixcokGa6IcQJpqNiznTnesj6n+kzsXU/SN47Nk29uDJrYXQI6c21FIjQ5cwpcXrlaAxiTevK3NqDn/v7spKycIzNB8TKgAfbqaAAbRaTCxW9EjBhDGPRtslIGxiGwUgjTNrMYBGKPrKaeKBT/ESm1iz6kYUKMuq30Hm8BP6uzXDg7iz6QXykxEyxJpSnfbFVHSIuCpFecTHw0WkXmw7PhShPULBaZcnr6zCXDe24KR3T205i/K6Sg9vaaatTb/OmQIDAQAB</string>
    <string name="completely_nads_free">Completely \nAds Free</string>
    <string name="subscribe_now_to_get_ads_free">Subscribe Now to Get Ads Free</string>
    <string name="sure_you_want_to_delete"> Are you sure you want to delete?</string>
    <string name="download">Download</string>
    <string name="ascii_faces">Ascii Faces</string>
    <string name="upgrade_to_pro">Upgrade To Pro</string>
    <string name="happy">Happy</string>
    <string name="angry">Angry</string>
    <string name="ad_is_loading">Ad is Loading…</string>
</resources>