<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:background="@drawable/dialog_round"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/txt_rename_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/leaguespartan_medium"
        android:text="@string/let_app_always_run_in_background"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp" />
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/leaguespartan_regular"
        android:text="@string/allowing_recoveryapp_to_always_run_in_the_background_may_reduce_battery_life"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deny_btn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/leaguespartan_regular"
            android:text="@string/deny"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/allow_btn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leaguespartan_regular"
            android:text="@string/allow"
            android:background="@color/white"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</LinearLayout>