<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/dialog_round"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/txt_rename_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/leaguespartan_bold"
        android:gravity="center_horizontal"
        android:padding="@dimen/_5sdp"
        android:text="@string/allow_access_to_your_files_to_view_modify_and_save_pdfs"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_description"
        android:fontFamily="@font/leaguespartan_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/_5sdp"
        android:text="@string/no_files_will_be_modified_or_deleted_n_without_your_consent_you_may_n_enable_permissions_in_the_settings_n_app"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />
    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sofia_pro_light_az"
            android:layout_gravity="center_horizontal"
            android:text="@string/app"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
        <TextView
            android:id="@+id/learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sofia_pro_regular_az"
            android:layout_gravity="center_horizontal"
            android:text="@string/learn_more"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:textColor="@color/gmts_blue"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <Button
            android:id="@+id/_go_to_setting"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leaguespartan_bold"
            android:background="@drawable/permission_dialog_border"
            android:text="@string/go_to_setting"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:fontFamily="@font/leaguespartan_bold"
            android:background="@null"
            android:id="@+id/not_now_btn"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_2sdp"
            android:text="@string/not_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

</LinearLayout>